--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 <body>
   <head class="bg-white black">
-
+    <nav>
+      <div class="container mx-auto flex justify-between items-center py-4">
+        <div>
+          <a href="#" class="text-2xl font-bold">sasly</a>
+        </div>
+        <div>
+          <a href="#" class="text-sm font-bold">Home</a>
+          <a href="#" class="text-sm font-bold">About</a>
+          <a href="#" class="text-sm font-bold">Contact</a>
+        </div>
+      </div>
+    </nav>
   </head>
 
   <mean>
